fixed  (overflow) conflict

--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,8 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(20, 101, 255, 0.6);
+  color: #3179fa;
+  background-color: #f3f7ff;
 }
 
 /* EXPERIENCE */
@@ -607,7 +608,6 @@ section.footer .foot .container-foot .list li {
     display: flex;
     height: 100vh;
     padding: 2rem;
-
     position: fixed;
     cursor: pointer;
     list-style: none;
@@ -618,7 +618,7 @@ section.footer .foot .container-foot .list li {
     flex-direction: column;
     justify-content: center;
     width: min(100vw, 30rem);
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(4px);
     transform: translateX(100%);
     transition: transform 0.3s ease;
     background-color: rgba(20, 101, 255, 0.8);
@@ -773,7 +773,7 @@ section.footer .foot .container-foot .list li {
   }
 
   .header .composition.hero .composition {
-    width: 45rem;
+    width: 100%;
     height: 30rem;
   }
 
@@ -781,6 +781,7 @@ section.footer .foot .container-foot .list li {
     width: 100%;
     height: 100%;
     border-radius: 20px;
+    overflow: hidden;
   }
 
   .header .composition.hero .composition.big {
@@ -994,5 +995,18 @@ section.footer .foot .container-foot .list li {
 
   section.my-work .paragraph_small {
     margin-top: 1rem;
+  }
+
+  section.footer {
+    overflow-x: hidden;
+  }
+
+  section.footer input {
+    background-color: transparent;
+    color: #ffffff;
+    padding: 1.4rem 1.5rem;
+    width: 50%;
+    border-bottom: #ffffff 1px solid;
+    border-radius: 12px;
   }
 }
